SPG-0605 | refactor : rest api selesai
