# main.go
@@ -38,13 +38,14 @@ func main() {
 	}
 
 	uow := repository.NewUnitOfWorkImpl(pgConn)
-	//profileRepoCfg := repository.NewProfileCfgRepoImpl(uow)
+	profileRepoCfg := repository.NewProfileCfgRepoImpl(uow)
 	profileRepo := repository.NewProfileRepoImpl(uow)
 	userRepo := repository.NewUserRepoImpl(uow)
 	minioRepo := repository.NewMinioImpl(minioConn)
 
 	accountUsecase := usecase.NewAccountUsecaseImpl(profileRepo, userRepo, minioRepo, 2*time.Second)
 	profileUsecase := usecase.NewProfileUsecaseImpl(profileRepo, userRepo, 2*time.Second)
+	profileCfgUsecase := usecase.NewProfileCfgUsecaseImpl(profileRepo, profileRepoCfg, 2*time.Second)
 	r := chi.NewRouter()
 
 	r.Use(middleware.Logger)
@@ -52,11 +53,15 @@ func main() {
 
 	accountHandler := restapi.NewAccountHandler(accountUsecase)
 	profileHandler := restapi.NewProfileHandler(profileUsecase)
+	profileCfgHandler := restapi.NewProfileCfgHandler(profileCfgUsecase)
 
 	r.Put("/account/{profile-id}", accountHandler.UpdateAccount)
 	r.Get("/profile", profileHandler.GetProfileByID)
 	r.Post("/profile", profileHandler.StoreProfile)
-
+	r.Post("/profile-config/{profile-id}", profileCfgHandler.CreateProfileCfg)
+	r.Get("/profile-config/{profile-id}/{config-name}", profileCfgHandler.GetProfileCfgByNameAndID)
+	r.Put("/profile-config/{profile-id}/{config-name}", profileCfgHandler.UpdateProfileCfg)
+		
 	err = http.ListenAndServe(config.AppPort, r)
 	if err != nil {
 		panic(err)
